tests/baselines/reference/wideningTuples4.errors.txt
wideningTuples4.ts(3,9): error TS2322: Type '[undefined, null]' is not assignable to type '[any]'.
  Source has 2 element(s) but target allows only 1.


==== wideningTuples4.ts (1 errors) ====
    var a: [any];
    
    var b = a = [undefined, null];
            ~
!!! error TS2322: Type '[undefined, null]' is not assignable to type '[any]'.
!!! error TS2322:   Source has 2 element(s) but target allows only 1.
    b = ["", ""];